[package]
name = "webgpu"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "webgpu"
path = "lib.rs"

[dependencies]
#gfx_core = { path = "../../../../gfx/src/core", features = ["serialize"] }
#gfx_backend_gl = { path = "../../../../gfx/src/backend/gl" }
#gfx_backend_vulkan = { path = "../../../../gfx/src/backend/vulkan" }
gfx_core = { git = "https://github.com/gfx-rs/gfx", branch = "ll", features = ["serialize"]}
gfx_backend_vulkan = { git = "https://github.com/gfx-rs/gfx", branch = "ll" }
heapsize = "0.4"
heapsize_derive = "0.1"
serde = "1"
serde_derive = "1"
