[package]
name = "webgpu"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "webgpu"
path = "lib.rs"

[dependencies]
heapsize = "0.4"
heapsize_derive = "0.1"
serde = "1"
serde_derive = "1"

[dependencies.gfx_core]
git = "https://github.com/kvark/gfx"
branch = "webgpu"
#path = "../../../../gfx/src/core"
features = ["serialize"]

[dependencies.gfx_backend_gl]
git = "https://github.com/kvark/gfx"
branch = "webgpu"

[target.'cfg(not(target_os = "macos"))'.dependencies.gfx_backend_vulkan]
git = "https://github.com/kvark/gfx"
branch = "webgpu"

[target.'cfg(target_os = "macos")'.dependencies.gfx_backend_metal]
git = "https://github.com/kvark/gfx"
branch = "webgpu"

[target.'cfg(windows)'.dependencies.gfx_backend_dx12]
git = "https://github.com/kvark/gfx"
branch = "webgpu"
#path = "../../../../gfx/src/backend/dx12"
