[package]
name = "webgpu"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "webgpu"
path = "lib.rs"

[dependencies]
heapsize = "0.4"
heapsize_derive = "0.1"
serde = "1"
serde_derive = "1"

[dependencies.gfx-hal]
git = "https://github.com/gfx-rs/gfx"
#branch = "webgpu"
#path = "../../../../gfx/src/hal"
features = ["serialize"]

[dependencies.gfx-backend-gl]
git = "https://github.com/gfx-rs/gfx"
#branch = "webgpu"
#path = "../../../../gfx/src/backend/gl"

[target.'cfg(not(target_os = "macos"))'.dependencies.gfx-backend-vulkan]
git = "https://github.com/gfx-rs/gfx"
#branch = "webgpu"
#path = "../../../../gfx/src/backend/vulkan"

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
git = "https://github.com/gfx-rs/gfx"
#branch = "webgpu"
#path = "../../../../gfx/src/backend/metal"

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
git = "https://github.com/gfx-rs/gfx"
#branch = "webgpu"
#path = "../../../../gfx/src/backend/dx12"
